RESOLVED FIXED135834
[GTK] The plugins metadata cache doesn't work if the user cache directory doesn't exist
https://bugs.webkit.org/show_bug.cgi?id=135834
Summary [GTK] The plugins metadata cache doesn't work if the user cache directory doe...
Carlos Garcia Campos
Reported 2014-08-12 03:05:00 PDT
We should ensure it exists.
Attachments
Patch (3.09 KB, patch)
2014-08-12 03:07 PDT, Carlos Garcia Campos
pnormand: review+
Carlos Garcia Campos
Comment 1 2014-08-12 03:07:53 PDT
Carlos Garcia Campos
Comment 2 2014-08-12 03:56:21 PDT
Note You need to log in before you can comment on or make changes to this bug.